@@ -1,5 +1,10 @@
 2001-11-11  Kevin Vandersloot <kfv101@psu.edu>
 
+	* procdialogs.c: make renice dialog conform to new button
+	ordering standards
+
+2001-11-11  Kevin Vandersloot <kfv101@psu.edu>
+
 	* proctable.c: add extra columns like nice value, more
 	memory values etc.
 
